# hacker-rank

./: .gitignore
algorithms/compare-the-triplets/: CMakeLists.txt
algorithms/compare-the-triplets/test/: CMakeLists.txt
algorithms/implementation/apple-and-orange/: CMakeLists.txt
algorithms/implementation/apple-and-orange/include/: FruitFallCalculator.hpp
algorithms/implementation/apple-and-orange/src/: main.cc
algorithms/implementation/apple-and-orange/test/: CMakeLists.txt  FruitFallCalculatorTest.cc
algorithms/implementation/beautiful-days-at-the-movies/: CMakeLists.txt
algorithms/implementation/beautiful-days-at-the-movies/include/: BeautifulDayPredictor.hpp
algorithms/implementation/beautiful-days-at-the-movies/src/: main.cc
algorithms/implementation/beautiful-days-at-the-movies/test/: BeautifulDayPredictorTest.cc  CMakeLists.txt
algorithms/implementation/birthday-chocolate/: CMakeLists.txt
algorithms/implementation/birthday-chocolate/include/: ChocolateDistributor.hpp
algorithms/implementation/birthday-chocolate/src/: main.cc
algorithms/implementation/birthday-chocolate/test/: CMakeLists.txt  ChocolateDistributorTest.cc
algorithms/implementation/breaking-the-records/: CMakeLists.txt
algorithms/implementation/breaking-the-records/include/: GameRecordsAnalyser.hpp
algorithms/implementation/breaking-the-records/src/: main.cc
algorithms/implementation/breaking-the-records/test/: CMakeLists.txt  GradingPolicyTest.cc
algorithms/implementation/circular-array-rotation/: CMakeLists.txt
algorithms/implementation/circular-array-rotation/include/: CircularArrayRotation.hpp
algorithms/implementation/circular-array-rotation/src/: main.cc
algorithms/implementation/circular-array-rotation/test/: CMakeLists.txt  CircularArrayRotationTest.cc
algorithms/implementation/climbing-the-leaderboard/: CMakeLists.txt
algorithms/implementation/climbing-the-leaderboard/include/: DenseRanking.hpp
algorithms/implementation/climbing-the-leaderboard/src/: main.cc
algorithms/implementation/climbing-the-leaderboard/test/: CMakeLists.txt  DenseRankingTest.cc
algorithms/implementation/counting-valleys/: CMakeLists.txt
algorithms/implementation/counting-valleys/include/: ValleyCounter.hpp
algorithms/implementation/counting-valleys/src/: main.cc
algorithms/implementation/counting-valleys/test/: CMakeLists.txt  ValleyCounterTest.cc
algorithms/implementation/day-of-the-programmer/: CMakeLists.txt
algorithms/implementation/day-of-the-programmer/include/: DayOfTheProgrammer.hpp  GregorianCalendar.hpp  JulianCalendar.hpp
algorithms/implementation/day-of-the-programmer/src/: main.cc
algorithms/implementation/day-of-the-programmer/test/: CMakeLists.txt  DayOfTheProgrammerTest.cc
algorithms/implementation/designer-pdf-viewer/: CMakeLists.txt
algorithms/implementation/designer-pdf-viewer/include/: WordSelection.hpp
algorithms/implementation/designer-pdf-viewer/src/: main.cc
algorithms/implementation/designer-pdf-viewer/test/: CMakeLists.txt  WordSelectionTest.cc
algorithms/implementation/electronics-shop/: CMakeLists.txt
algorithms/implementation/electronics-shop/include/: PriceOptimiser.hpp
algorithms/implementation/electronics-shop/src/: main.cc
algorithms/implementation/electronics-shop/test/: CMakeLists.txt  PriceOptimiserTest.cc
algorithms/implementation/jumping-on-the-clouds-revisited/: CMakeLists.txt
algorithms/implementation/jumping-on-the-clouds-revisited/include/: CloudType.hpp  EnergyEstimator.hpp
algorithms/implementation/jumping-on-the-clouds-revisited/src/: main.cc
algorithms/implementation/jumping-on-the-clouds-revisited/test/: CMakeLists.txt  EnergyEstimatorTest.cc
algorithms/implementation/magic-square-forming/: CMakeLists.txt
algorithms/implementation/magic-square-forming/include/: MagicSquareFormer.hpp
algorithms/implementation/magic-square-forming/src/: main.cc
algorithms/implementation/magic-square-forming/test/: CMakeLists.txt  MagicSquareFormerTest.cc
algorithms/implementation/migratory-birds/: CMakeLists.txt
algorithms/implementation/migratory-birds/include/: MigratoryBirds.hpp
algorithms/implementation/migratory-birds/src/: main.cc
algorithms/implementation/migratory-birds/test/: CMakeLists.txt  MigratoryBirdsCommonTypeTest.cc  MigratoryBirdsTest.cc
algorithms/implementation/non-divisible-subset/: CMakeLists.txt
algorithms/implementation/non-divisible-subset/include/: NonDivisibleSubset.hpp
algorithms/implementation/non-divisible-subset/src/: main.cc
algorithms/implementation/non-divisible-subset/test/: CMakeLists.txt  NonDivisibleSubsetTest.cc
algorithms/implementation/picking-numbers/: CMakeLists.txt
algorithms/implementation/picking-numbers/include/: PickingNumbers.hpp
algorithms/implementation/picking-numbers/src/: main.cc
algorithms/implementation/picking-numbers/test/: CMakeLists.txt  PickingNumbersTest.cc
algorithms/implementation/save-the-prisoner/: CMakeLists.txt
algorithms/implementation/save-the-prisoner/include/: CandiesDistributor.hpp
algorithms/implementation/save-the-prisoner/src/: main.cc
algorithms/implementation/save-the-prisoner/test/: CMakeLists.txt  CandiesDistributorTest.cc
algorithms/implementation/sequence-equation/: CMakeLists.txt
algorithms/implementation/sequence-equation/include/: SequenceEquation.hpp
algorithms/implementation/sequence-equation/src/: main.cc
algorithms/implementation/sequence-equation/test/: CMakeLists.txt  SequenceEquationTest.cc
algorithms/implementation/sock-merchant/: CMakeLists.txt
algorithms/implementation/sock-merchant/include/: SockMerchant.hpp
algorithms/implementation/sock-merchant/src/: main.cc
algorithms/implementation/sock-merchant/test/: CMakeLists.txt  SockMerchant.cc
algorithms/warmup/a-very-big-sum/: CMakeLists.txt
algorithms/warmup/a-very-big-sum/include/: Accumulator.hpp
algorithms/warmup/a-very-big-sum/src/: main.cc
algorithms/warmup/min-max-sum/: CMakeLists.txt
algorithms/warmup/plus-minus/: CMakeLists.txt
algorithms/warmup/time-conversion/: CMakeLists.txt
(+120 files in other folders)
